app.js refactored

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ API_SECURITY.md
 /reference
 reference/app reference.png
 /v2
+old_app.html
+README.md
+SECURITY_GUIDE.md
+DEPLOYMENT_SUMMARY.md
+INTEGRATION_CHECKLIST.md
